# ccapi_upstream

./: README.md
.github/workflows/: release.yml  test.yml
app/: CMakeLists.txt
app/include/app/: common.h  event_handler_base.h  historical_market_data_event_processor.h  order.h
app/src/single_order_execution/: main.cpp
app/src/spot_market_making/: main.cpp
binding/: CMakeLists.txt  ccapi_logger.cpp
binding/csharp/: CMakeLists.txt
binding/csharp/test/: MainProgram.cs
binding/go/: CMakeLists.txt
binding/go/test/: main.go
binding/java/: CMakeLists.txt
binding/java/test/: Main.java
binding/javascript/: CMakeLists.txt
binding/python/: CMakeLists.txt  setup.py.in
binding/python/test/: main.py
example/: CMakeLists.txt
example/src/cross_exchange_arbitrage/: main.cpp
example/src/custom_service_class/: main.cpp
example/src/enable_library_logging/: CMakeLists.txt  main.cpp
example/src/execution_management_advanced_request/: CMakeLists.txt  main.cpp
example/src/execution_management_advanced_subscription/: main.cpp
example/src/execution_management_simple_request/: CMakeLists.txt  main.cpp
example/src/execution_management_simple_subscription/: CMakeLists.txt  main.cpp
example/src/fix_advanced/: CMakeLists.txt  main.cpp
example/src/fix_simple/: CMakeLists.txt  main.cpp
example/src/generic_private_request/: CMakeLists.txt  main.cpp
example/src/generic_public_request/: CMakeLists.txt  main.cpp
example/src/heartbeat/: CMakeLists.txt
example/src/market_data_advanced_request/: CMakeLists.txt  main.cpp
example/src/market_data_advanced_subscription/: CMakeLists.txt  main.cpp
example/src/market_data_simple_request/: CMakeLists.txt  main.cpp
example/src/market_data_simple_subscription/: main.cpp
example/src/market_making/: main.cpp
example/src/override_exchange_url_at_runtime/: main.cpp
example/src/set_timer/: CMakeLists.txt
example/src/test_cpu_usage/: CMakeLists.txt  main.cpp
example/src/test_order_latency/: CMakeLists.txt  main.cpp
example/src/utility_set_timer/: CMakeLists.txt  main.cpp
include/ccapi_cpp/: ccapi_decimal.h  ccapi_element.h  ccapi_event.h  ccapi_event_dispatcher.h  ccapi_event_handler.h  ccapi_fix_connection.h  ccapi_hmac.h  ccapi_http_connection.h  ccapi_http_retry.h  ccapi_inflate_stream.h  ccapi_jwt.h  ccapi_logger.h  ccapi_macro.h  ccapi_market_data_message.h  ccapi_message.h  ccapi_queue.h  ccapi_request.h  ccapi_session.h  ccapi_session_configs.h  ccapi_session_options.h  ccapi_subscription.h  ccapi_url.h  ccapi_util.h  ccapi_util_private.h  ccapi_ws_connection.h
include/ccapi_cpp/service/: ccapi_execution_management_service.h  ccapi_execution_management_service_ascendex.h  ccapi_execution_management_service_binance.h  ccapi_execution_management_service_binance_base.h  ccapi_execution_management_service_binance_coin_futures.h  ccapi_execution_management_service_binance_derivatives_base.h  ccapi_execution_management_service_binance_us.h  (+83 more)
performance/: CMakeLists.txt
test/: CMakeLists.txt  ccapi_logger.cpp
test/test_build/: CMakeLists.txt  test.cpp
test/test_unit/: CMakeLists.txt
(+59 files in other folders)
